# 2010CMRoboBitsGroup3

./: .cproject  .gitignore  .project
robot/: VisionConfigurable.cpp  eclipse.cpp
robot/Agent/: Agent.cpp  Agent.h  RobotState.cpp  RobotState.h  SharedInformation.h
robot/Behaviors/: Behaviors.h
robot/Comm/: Comm.h
robot/Factory/: Factory.cpp  Factory.h
robot/GameController/: GameController.h  GameState.cpp  GameState.h  RoboCupGameControlData.h
robot/Localization/: Localization.h  Pose.cpp  Pose.h
robot/Log/: Log.cpp  Log.h  LogMacros.h  LogSettings.h
robot/Main/: Makefile  Makefile.backup  Makefile.original  Makefile.profiler  prepare_original.sh  prepare_profiler.sh
robot/Motion/: StaticActionPlayer.cpp  StaticActionPlayer.h
robot/NaoQiModule/: Makefile  Makefile.backup  Makefile.original
robot/Vision/: Vision.h  VisionFeatures.h  VisionFeaturesImpl.cpp  VisionFeaturesImpl.h
robot/WorldModel/: WorldFeatures.h  WorldFeaturesImpl.cpp  WorldFeaturesImpl.h  WorldModel.h
robot/config/: agent.txt  apollo.txt  ares.txt  artemis.txt  athena.txt  behaviors.txt  camera.txt  comm.txt  config.txt  configurable.txt  field.txt  gameController.txt  identity.txt  ledController.txt  log.txt  logToFile.txt  logToText.txt  physical.txt  rules.txt  sensorThreshold.txt  speechController.txt  sslVision.txt  visualizer.txt
robot/shared/: Matrix.h  UsefulMacros.h  num_util.h  (+2 more)
tools/CMVEdit/: CMakeLists.txt  build.sh  config.in  copyThreshold.sh
tools/CMVEdit/config/: config.txt
tools/CMVEdit/src/: CMVEdit.cpp  CMVEdit.h  ConfigFile.cpp  ConfigFile.h  NaoImageCapture.cpp  NaoImageCapture.h  config.h
tools/CMVEdit/src/shared/: bbox.h  camera_view.cc  camera_view.h  cmv_region.h  cmv_threshold.h  colorSpaceConverter.cpp  colorSpaceConverter.h  crc32.h  fl_helper.cc  fl_helper.h  geomalgo.h  geometry.h  gl_draw.cc  gl_draw.h  gl_texture.cc  gl_texture.h  gvector.h  image.cc  image.h  image_io.cc  image_io.h  iofile.cc  pose.h  quaternion.h  random.h  range.h  runqueue.h  tmap_view.cc  tmap_view.h  util.h  vision.cc  vision.h  vision_constants.h  yuv2rgb.cc  yuv2rgb.h  zoom_win.cc  zoom_win.h
(+410 files in other folders)
